--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="/movie-search/favicon.ico"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <link rel="apple-touch-icon" href="/movie-search/logo192.png"/>
     <link rel="manifest" href="/movie-search/manifest.json"/>
     <title>React App</title>
