--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <link rel="apple-touch-icon" href="/movie-search/logo192.png"/>
     <link rel="manifest" href="/movie-search/manifest.json"/>
-    <title>React App</title>
+    <title>Movie Search</title>
     <script defer="defer" src="/movie-search/static/js/main.be58a129.js"></script>
     <link href="/movie-search/static/css/main.334bdeb1.css" rel="stylesheet">
     </head>
